--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
   <link rel="stylesheet" href="{% static 'css/problem-card.css' %}">
   <link rel="stylesheet" href="{% static 'css/verdict.css' %}">
-  <link rel="stylesheet" href="{% static 'css/custom-dropdown.css' %}">
+  <link rel="stylesheet" href="{% static 'css/problem_detail.css' %}">
 
   {% block extra_css %}{% endblock %}
 </head>
